--- a/css/panda.scss
+++ b/css/panda.scss
@@ -66,3 +66,10 @@ header {
   text-align: center;
   margin-top: 50px;
 }
+.ourproject_name {
+  text-align: center;
+  width: 1500px;
+  height: 50px;
+  margin: 20px;
+  align-items: center;
+}
