--- a/css/style.css
+++ b/css/style.css
@@ -525,6 +525,7 @@ nav ul ul li a:hover {
 
 .main-banner {
   height: 1000px;
+  padding-top: 90px;
   /* background-image: url(../images/main-banner-bg.jpg); */
   background-repeat: no-repeat;
   background-size: cover;
@@ -3085,6 +3086,11 @@ header.sticky {
   /* background-image: url(../images/pager-bg.jpg); */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+nav ul {
+  margin-bottom: 0;
+}
+
 header.sticky .header-content {
   align-items: center;
   height: 90px;
